# FinkSpace

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: release.mjs  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  fs.rs  mod.rs
src-tauri/src/pty/: session.rs
src/components/: AddAgentButton.tsx  AgentGrid.tsx  AgentHeader.tsx  AgentTile.tsx  CdInput.tsx  ColorPicker.tsx  ContextMenu.tsx  EmptyWorkspaceWizard.tsx  HomeView.tsx  InlineEdit.tsx  KanbanBoard.tsx  NavigateMenu.tsx  SettingsPanel.tsx  StatusBar.tsx  SwarmView.tsx  TabContextMenu.tsx  TerminalView.tsx  TitleBar.tsx  UpdateNotification.tsx  WorkspaceTabs.tsx
src/finkspace/: AddAgentButton.tsx  AgentGrid.tsx  AgentHeader.tsx  AgentTile.tsx  EmptyWorkspaceWizard.tsx  TabContextMenu.tsx  TerminalView.tsx  WorkspaceTabs.tsx  notifications-store.ts  useTerminal.ts  workspace-store.ts
src/finkswarm/: SwarmConsole.tsx  SwarmDashboard.tsx  SwarmGraph.tsx  SwarmTerminalModal.tsx  SwarmView.tsx  SwarmWizard.tsx  manager.ts  store.ts  types.ts
src/hooks/: useKeyboardShortcuts.ts  useTerminal.ts  useTheme.ts
src/lib/: changelog.ts  colors.ts  platform.ts  shortcuts.ts  tauri-bridge.ts  terminal-manager.ts
src/stores/: kanban-store.ts  navigation-store.ts  (+2 more)
(+13 files in other folders)
